for no real reason it now renders what it needs to

--- a/fp_website/base/templates/registration/login.html
+++ b/fp_website/base/templates/registration/login.html
@@ -1,5 +1,5 @@
 <form method="POST">
     {% csrf_token %}
     {{form}}
-    <button type="submit">Submit</button>
+    <button type="submit">Submit</buttron>
 </form>
