--- a/fp_website/base/templates/registration/login.html
+++ b/fp_website/base/templates/registration/login.html
@@ -1,5 +1,10 @@
+{% extends "base.html" %}
+{% block content %}
+<div class="shadow-wrap">
 <form method="POST">
     {% csrf_token %}
     {{form}}
     <button type="submit">Submit</buttron>
 </form>
+</div>
+{% endblock content %}
