--- a/fp_website/base/templates/registration/signup.html
+++ b/fp_website/base/templates/registration/signup.html
@@ -1,5 +1,8 @@
+{% extends "base.html" %}
+{% block content %}
 <form method="POST">
     {% csrf_token %}
     {{form}}
     <button type="submit">Submit</buttron>
 </form>
+{% endblock content %}
