--- a/fp_website/base/static/css/style.css
+++ b/fp_website/base/static/css/style.css
@@ -10,7 +10,7 @@ body{
 .shadow-wrap{
     border-radius: 10px;
     padding: 25px;
-    background-color: rgb(255, 228, 237);
+    background-color: #CADCFF;
 }
 
 .form-wrap{
@@ -33,7 +33,7 @@ body{
     border-radius: 5px;
     border: 1px solid rgb(255, 255, 255);
     background: #FFF;
-    color: #c69aa3;
+    color: #CADCFF;
 }
 
 #id_username{
