--- a/fp_website/base/templates/registration/login.html
+++ b/fp_website/base/templates/registration/login.html
@@ -1,10 +1,12 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="shadow-wrap">
+<div class="form-wrap">
 <form method="POST">
     {% csrf_token %}
     {{form}}
     <button type="submit">Submit</buttron>
 </form>
+</div>
 </div>
 {% endblock content %}
